TEST_PROGRAMS/INVALID/04/70.go
package main

func main() {
    // Non lvalue in assignment
    -1 /= 2
}
